Ignore Python cache and remove tracked __pycache__

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,15 @@
-.venv
+# Python cache
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+
+# Virtual environment
+.venv/
+
+# OS files
+.DS_Store
+Thumbs.db
+
+# Streamlit
+.streamlit/
